--- a/index.html
+++ b/index.html
@@ -10,19 +10,25 @@
 </head>
 
 <body>
-    <div id="canvas">
-        <div id="primary-number">7</div>
-        <div id="add">+</div>
-        <div id="secondary-number">10</div>
-        <div id="equal">=</div>
-        <div>
-            <input type="number" id="guess">
+    <div id="app" class="canvas">
+        <div class="top">
+            <div id="primary-number">{{ primaryNumber }}</div>
+            <div id="add">+</div>
+            <div id="secondary-number">{{ secondaryNumber }}</div>
+            <div id="equal">=</div>
+            <div>
+                <input type="number" id="guess" v-model="userGuess">
+            </div>
+            <div>
+                <button id="btn" @click="onUserSubmit">check</button>
+            </div>
         </div>
-        <div>
-            <button id="btn">check</button>
+        <div class="bottom">
+            <p v-if="showSubmitMessage" :style="{ 'background-color': submitMessageColor }">{{ submitMessage }}</p>
         </div>
     </div>
 
+    <script src="https://unpkg.com/vue@3"></script>
     <script src="app.js"></script>
 </body>
 
